PP-13582 Change logs to KV format
- Updates logs format to KV format

  Tested locally and below is the example log

>  server="localhost" dest_port="39000" dest_ip="172.18.0.16" src="172.18.0.1" src_ip="172.18.0.1" time_local="12/Feb/2025:19:05:28 +0000" protocol="HTTP/1.1" status="200" bytes_out="7583" bytes_in="27258" http_referer="https://localhost:39000/account/b0265cab2cc3439aa386682a670e3e8d/transactions?reference=&email=****&cardholderName=&lastDigitsCardNumber=&fromDate=&fromTime=&toDate=&toTime=&metadataValue=" http_user_agent="Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/133.0.0.0 Safari/537.36" nginx_version="1.26.2" http_x_forwarded_for="-" http_x_header="-" uri_query="reference=&email=****&cardholderName=&lastDigitsCardNumber=&fromDate=&fromTime=&toDate=&toTime=&metadataValue=" uri_path="/account/b0265cab2cc3439aa386682a670e3e8d/transactions" http_method="GET" response_time="0.536" request_time="0.535" category="text/html; charset=utf-8" https="on" http_x_forwarded_proto="-" x_request_id="231201de07f927fa93d43b586f78c676"

   current format

> localhost:39000 fb8b55068c7a3b2943719ad0ca226ec5 - 172.18.0.1 - [13/Feb/2025:08:58:18 +0000] "GET /account/b0265cab2cc3439aa386682a670e3e8d/transactions?reference=&email=test%40email.com&cardholderName=&lastDigitsCardNumber=&fromDate=&fromTime=&toDate=&toTime=&metadataValue= HTTP/1.1" 200 7077 0.582 - "https://localhost:39000/account/b0265cab2cc3439aa386682a670e3e8d/transactions" "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/133.0.0.0 Safari/537.36"

- Note that the above also fixes email redaction
- Error logs format will stay the same

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # Runs locally in about 4.5 minutes - if it takes longer than this, something has gone wrong.
-    timeout-minutes: 10 
+    timeout-minutes: 10
 
     defaults:
       run:
@@ -48,7 +48,7 @@ jobs:
           echo "Testing Minimal Server..."
           curl --fail -sk -o /dev/null "https://localhost:10443"
           echo "Check the log output"
-          docker compose logs test-minimal  | grep -E '[^:]+:'10443' [0-9a-f]+ - [0-9.]+ - \[[0-9]+/[A-Z][a-z][a-z]/[0-9:]{13} \+[0-9]{4}\] "GET / HTTP/1\.1" [0-9]{3} [0-9]+ [0-9]+\.[0-9]{3} - "-" "[^"]+"'
+          docker compose logs test-minimal  | grep -E 'server="[0-9a-z]+" dest_port="[0-9]+" dest_ip="[0-9.]+" src="[0-9.]+" src_ip="[0-9.]+" time_local="[0-9]+/[A-Z][a-z][a-z]/[0-9:]{13} \+[0-9]{4}" protocol="HTTP/1\.1" status="[0-9]{3}" bytes_out="[0-9]+" bytes_in="[0-9-]+" http_referer="" http_user_agent="curl/[0-9.]+" nginx_version="[0-9.]+" http_x_forwarded_for="-" http_x_header="-" uri_query="" uri_path="/" http_method="GET" response_time="-" request_time="[0-9.]+" category="text/html" https="" x_request_id=""'
           echo "Test limited protcol and SSL cipher... "
           docker compose run --rm --entrypoint bash nginx -c "echo GET / | /usr/bin/openssl s_client -cipher 'AES256+EECDH' -tls1_2 -connect test-minimal:10443"  &> /dev/null;
           docker compose stop test-minimal
