--- a/nginx.conf
+++ b/nginx.conf
@@ -74,14 +74,21 @@ http {
       text/x-cross-domain-policy;
     # text/html is always compressed by HttpGzipModule
 
-    log_format extended '$host:$server_port $uuid $http_x_forwarded_for $remote_addr $remote_user [$time_local] "$request" $status $body_bytes_sent $request_time $http_x_forwarded_proto "$http_referer" "$http_user_agent"';
+    log_format key-value 'server="$host" dest_port="$server_port" dest_ip="$server_addr" src="$remote_addr" '
+                    'src_ip="$realip_remote_addr" time_local="$time_local" protocol="$server_protocol" status="$status" '
+                    'bytes_out="$bytes_sent" bytes_in="$upstream_bytes_received" http_referer="$_http_referer" '
+                    'http_user_agent="$http_user_agent" nginx_version="$nginx_version" '
+                    'http_x_forwarded_for="$http_x_forwarded_for" http_x_header="$http_x_header" '
+                    'uri_query="$_query_string" uri_path="$uri" http_method="$request_method" '
+                    'response_time="$upstream_response_time" request_time="$request_time" '
+                    'category="$sent_http_content_type" https="$https" x_request_id="$uuid"';
 
     map $request_uri $loggable {
       ~^/nginx_status/  0;
       default 1;
     }
 
-    access_log /dev/stdout extended if=$loggable;
+    access_log /dev/stdout key-value if=$loggable;
 
     include /etc/nginx/conf/upload_size*.conf;
     include /etc/nginx/conf/nginx_http_extras*.conf;
